[package]
name = "utoipa-validate-gen"
description = "Helper crate for utoipa-validate that defines the Validatable derive macro."
authors = ["Tobias Erbshäußer <tobias.erbshaeusser@gmail.com>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
regex = "1.9.5"
syn = { version = "2.0.31", features = ["full"] }
utoipa = "3.5.0"
