[package]
name = "utoipa-validate"
description = "Extension of the utoipa crate that allows to validate values based on the schema attributes."
authors = ["Tobias Erbshäußer <tobias.erbshaeusser@gmail.com>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.9.5"
utoipa-validate-gen = { path = "../utoipa-validate-gen" }

[dev-dependencies]
utoipa = "3.5.0"
